# sobit_follower

./: CMakeLists.txt  README.en.md  README.md  install.sh  package.xml  tf_frame_def.txt
follow_path_generator3/: CMakeLists.txt  package.xml
follow_path_generator3/include/follow_path_generator3/: dynamic_window_approach.hpp  dynamic_window_approach_omni.hpp  path_generator.hpp  pid_controller.hpp
follow_path_generator3/param/: dwa_params.yaml
follow_path_generator3/src/: dynamic_window_approach.cpp  dynamic_window_approach_omni.cpp  path_generator.cpp  pid_controller.cpp
follow_path_generator4/: CMakeLists.txt  package.xml
follow_path_generator4/include/follow_path_generator4/: dynamic_window_approach.hpp  pid_controller.hpp
follow_path_generator4/src/: dynamic_window_approach.cpp  pid_controller.cpp
multiple_observation_kalman_filter/: CMakeLists.txt  README.en.md  README.md  package.xml
multiple_observation_kalman_filter/include/multiple_observation_kalman_filter/: multiple_observation_kalman_filter.hpp
multiple_observation_kalman_filter/src/: multiple_observation_kalman_filter.cpp
multiple_observation_tracing_simulator/: CMakeLists.txt  README.en.md  README.md  package.xml
multiple_observation_tracing_simulator/config/dynamic_reconfigure/: ObservationParameter.cfg  TargetControllerParameter.cfg  (+2 more)
multiple_observation_tracing_simulator/launch/: multiple_observation_tracing_simulator.launch
multiple_observation_tracing_simulator/src/: tracker.cpp
multiple_sensor_person_tracking/: CMakeLists.txt  README.en.md  README.md  install.sh  nodelet_description.xml  package.xml
multiple_sensor_person_tracking/launch/: tracker.launch  tracker2.launch  tracker3.launch
multiple_sensor_person_tracking/msg/: FollowingPosition.msg
multiple_sensor_person_tracking/multiple_sensor_person_tracking/: CMakeLists.txt  nodelet_description.xml
multiple_sensor_person_tracking/param/: dr_spaam_param.yaml  kalman_filter_params.yaml  sensor_rotator_param.yaml  ssd_params.yaml  tracking_params.yaml
multiple_sensor_person_tracking/scripts/: dr_spaam_ros.py  dr_spaam_ros_service.py
multiple_sensor_person_tracking/src/: multiple_observation_kalman_filter.cpp  multiple_sensor_person_tracker_id_nodelet.cpp  multiple_sensor_person_tracker_nodelet.cpp  multiple_sensor_person_tracker_nodelet2.cpp  multiple_sensor_person_tracker_nodelet_id_prediction.cpp  multiple_sensor_person_tracker_nodelet_no_exits_search.cpp  multiple_sensor_person_tracker_nodelet_stop_state.cpp  person_aim_sensor_rotator_nodelet.cpp  person_aim_sensor_rotator_nodelet_pro.cpp  sobit_edu_multiple_sensor_person_tracker_nodelet.cpp  sobit_edu_person_aim_sensor_rotator_nodelet.cpp  sobit_pro_multiple_sensor_person_tracker_nodelet.cpp  sobit_pro_person_aim_sensor_rotator_nodelet.cpp
person_follower3/: CMakeLists.txt  package.xml
person_follower3/launch/: particle_person_follower.launch  svdd_particle_person_follower.launch
person_follower3/src/: person_follower.cpp
person_follower4/: CMakeLists.txt  nodelet_description.xml  package.xml
person_follower4/launch/: particle_person_follower.launch  svdd_particle_person_follower.launch
person_follower4/param/: dwa_params.yaml  particle_person_tracker_params.yaml  path_generator_params.yaml  topic_params.yaml  velocity_smoother.yaml
person_follower4/src/: path_generator_nodelet.cpp  person_aim_sensor_rotator_nodelet.cpp  person_tracker_nodelet.cpp
person_following_control/: CMakeLists.txt  README.en.md  README.md  nodelet_description.xml  package.xml  plugin_description.xml
person_following_control/launch/: person_following_control.launch  simulator.launch  velocity_smoother.launch
person_following_control/msg/: FollowingPosition.msg
person_following_control/param/: following_control_param.yaml  velocity_smoother_param.yaml  virtual_spring_model_dynamic_window_approach_param.yaml
person_following_control/src/: dynamic_window_approach.cpp  following_control_nodelet.cpp  pid_controller.cpp  sobit_edu_following_control_nodelet.cpp  sobit_pro_following_control_nodelet.cpp  virtual_spring_model.cpp
person_tracking3/: CMakeLists.txt  package.xml
person_tracking3/param/: particle_person_tracker_params.yaml  sensor_rotator_params.yaml  svdd_leg_tracker_params.yaml  topic_params.yaml
person_tracking3/src/: follow_position_handle.cpp  particle_person_tracker.cpp  pcl_handle.cpp  person_aim_sensor_rotator.cpp  person_detector.cpp  svdd_particle_person_tracker.cpp
person_tracking4/: CMakeLists.txt  package.xml
person_tracking4/msg/: FollowPosition.msg  RotatePosition.msg
person_tracking4/src/: follow_position_handle.cpp  particle_person_tracker.cpp  pcl_handle.cpp  person_detector.cpp  svdd_particle_person_tracker.cpp
sobit_follower/: CMakeLists.txt  README.en.md  README.md  bag2csv.bash  checklist.sh  follow_id.sh  package.xml  plot.bash  rosbag_record.bash
sobit_follower/csv/: following_position.csv  velocity.csv
sobit_follower/doc/: murakami_daiki_Master_research_summary.pdf:Zone.Identifier
sobit_follower/launch/: follower_me.launch  follower_me2.launch  follower_me_id_prediction.launch  follower_me_no_exists_search.launch  follower_me_stop_state.launch  rviz_follower_me_id.launch  rviz_follower_me_stop_state.launch  sensor_bringup.launch  simulator.launch  simulator_azure_kinect.launch  simulator_id.launch  simulator_id_azure_kinect.launch  simulator_id_azure_kinect_no_exists_search.launch  simulator_id_azure_kinect_stop_state.launch  simulator_id_no_exists_serach.launch  simulator_id_stop_state.launch  sobit_edu_bringup.launch  sobit_follower.launch
sobit_follower/param/: dr_spaam_param.yaml  following_control_param.yaml  following_control_param_301.yaml  following_control_param_corridor.yaml  kalman_filter_params.yaml  sensor_rotator_param.yaml  ssd_param.yaml  ssd_params.yaml  tracker_param.yaml  tracker_params.yaml  tracking_params.yaml  velocity_smoother_param.yaml
sobit_follower/scripts/: plot.py  plot_env.py  plot_env_suzuki_experiment.py  plot_suzuki_experiment.py  speech_no_exists.py  speech_reid_state.py
(+713 files in other folders)
