<?xml version="1.0"?>
<package format="2">
  <name>sobit_follower</name>
  <version>0.0.0</version>
  <description>The sobit_follower package</description>

  <maintainer email="sobit-x3@todo.todo">sobit-x3</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ssd_node</depend>
  <depend>sobit_common_msg</depend>
  <depend>sobit_education_library</depend>
  <depend>sobit_mini_library</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <export>

  </export>
</package>
