<?xml version="1.0"?>
<package format="2">
  <name>follow_path_generator4</name>
  <version>0.0.0</version>
  <description>The follow_path_generator4 package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>person_tracking4</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <exec_depend>message_runtime</exec_depend> -->

  <export>

  </export>
</package>
