<?xml version="1.0"?>
<package format="2">
  <name>multiple_observation_kalman_filter</name>
  <version>0.0.0</version>
  <description>The multiple_observation_kalman_filter package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
