<?xml version="1.0"?>
<package format="2">
  <name>multiple_observation_tracing_simulator</name>
  <version>0.0.0</version>
  <description>The multiple_observation_tracing_simulator package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>multiple_observation_kalman_filter</depend>
  <depend>message_filters</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
