<?xml version="1.0"?>
<package format="2">
    <name>multiple_sensor_person_tracking</name>
    <version>0.0.0</version>
    <description>The multiple_sensor_person_tracking package</description>

    <maintainer email="sobits@todo.todo">sobits</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>laser_geometry</depend>
    <depend>person_following_control</depend>

    <depend>dr_spaam_ros</depend>
    <depend>sobit_education_library</depend>
    <depend>ssd_nodelet</depend>

    <depend>pluginlib</depend>
    <depend>nodelet</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <nodelet plugin="${prefix}/nodelet_description.xml"/>
    </export>
</package>
