<?xml version="1.0"?>
<package format="2">
  <name>person_follower3</name>
  <version>0.0.0</version>
  <description>The person_follower3 package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>person_tracking3</depend>
  <depend>follow_path_generator3</depend>
  <depend>message_filters</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
