<?xml version="1.0"?>
<package format="2">
  <name>person_follower4</name>
  <version>0.0.0</version>
  <description>The person_follower4 package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>follow_path_generator4</depend>
  <depend>person_tracking4</depend>

  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <exec_depend>message_runtime</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>
</package>
