<?xml version="1.0"?>
<package format="2">
  <name>person_following_control</name>
  <version>0.0.0</version>
  <description>The person_following_control package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>multiple_observation_kalman_filter</depend>
  <depend>multiple_sensor_person_tracking</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <nodelet plugin="${prefix}/nodelet_description.xml"/>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
