<?xml version="1.0"?>
<package format="2">
  <name>person_tracking3</name>
  <version>0.0.0</version>
  <description>The person_tracking3 package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>svdd_leg_tracker_library</depend>
  <depend>sobit_mini_library</depend>
  <depend>sobit_pro_library</depend>
  <depend>ssd_node</depend>
  <depend>sobit_education_library</depend>
  <depend>point_cloud_tracker</depend>
  <depend>message_filters</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
