<?xml version="1.0"?>
<package format="2">
  <name>person_tracking4</name>
  <version>0.0.0</version>
  <description>The person_tracking4 package</description>

  <maintainer email="sobits@todo.todo">sobits</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_filters</depend>
  <depend>point_cloud_tracker</depend>
  <depend>sobit_education_library</depend>
  <depend>sobit_mini_library</depend>
  <!-- <depend>sobit_pro_library</depend> -->
  <depend>sobit_common_msg</depend>
  <depend>svdd_leg_tracker_library</depend>

  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <exec_depend>message_runtime</exec_depend> -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
